src/test/ui/parser/issue-22647.stderr
error: expected one of `:`, `;`, `=`, or `@`, found `<`
  --> $DIR/issue-22647.rs:2:15
   |
LL |     let caller<F> = |f: F|  //~ ERROR expected one of `:`, `;`, `=`, or `@`, found `<`
   |               ^ expected one of `:`, `;`, `=`, or `@` here

error: aborting due to previous error

